--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
+    "chart.js": "^4.5.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
